--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <spring.version>4.1.9.RELEASE</spring.version>
         <aspectj.version>1.8.5</aspectj.version>
+        <commons.io.version>2.3</commons.io.version>
     </properties>
     <dependencies>
         <!--spring 核销包-->
@@ -30,6 +31,7 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!--aspectj-->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
@@ -39,6 +41,13 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
+        </dependency>
+
+        <!--io-->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
         </dependency>
     </dependencies>
     <build>
