--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring-demo</module>
         <module>springboot-autoConfigPlugin</module>
         <module>springboot-useAutoPlugin</module>
+        <module>springboot-web</module>
     </modules>
 
 
