--- a/springboot-autoConfigPlugin/pom.xml
+++ b/springboot-autoConfigPlugin/pom.xml
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>1.3.0.M1</version>
+            <version>1.5.1.RELEASE</version>
         </dependency>
     </dependencies>
 
