--- a/springboot-web/src/main/resources/application.properties
+++ b/springboot-web/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-spring.mvc.view.prefix=/WEB-INF/views/
+
+# 页面默认前缀目录
+spring.mvc.view.prefix=/WEB-INF/view/
+# 响应页面默认后缀
 spring.mvc.view.suffix=.jsp
+# 自定义属性，可以在Controller中读取
+application.hello=HelloAngel From application
+
+
