--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>springboot-autoConfigPlugin</module>
         <module>springboot-web</module>
         <module>springboot-mybatis-druid</module>
+        <module>springboot-mybatis-redis</module>
 
     </modules>
 
