--- a/springboot-mybatis-druid/src/main/resources/application.properties
+++ b/springboot-mybatis-druid/src/main/resources/application.properties
@@ -21,4 +21,4 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 server.port=8080
 spring.application.name=mybatis
 
-logging.level.root=debug
+#logging.level.root=debug
