feat: 增加slf4j logback日志

--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -11,4 +11,4 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 server.port=8080
 spring.application.name=mybatis
 
-logging.level.root=info
+#logging.level.root=info
